<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs291a.snapcrop.AspectRatioFragment">

    <TextView
        android:id="@+id/section_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_2_instructions"
        android:textSize="@dimen/section_instructions"/>

    <LinearLayout
        android:id="@+id/width_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/section_label_2">

        <TextView
            android:id="@+id/aspect_width_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width"
            android:textSize="20dp"
            android:paddingTop="20dp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/height_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/width_layout">

        <TextView
            android:id="@+id/aspect_height_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="20dp"
            android:paddingTop="@dimen/fab_margin"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:inputType="number" />
    </LinearLayout>



    <!--<TextView-->
        <!--android:id="@+id/aspect_height_text"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/height"-->
        <!--android:paddingTop="@dimen/fab_margin"-->
        <!--android:layout_below="@+id/aspect_width_text"/>-->

    <!--<EditText-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_below="@+id/aspect_width_text"-->
        <!--android:layout_toRightOf="@+id/aspect_height_text"/>-->




    <!--<Button-->
        <!--android:id="@+id/load_from_gallery_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/load_from_gallery_button_text"-->
        <!--android:layout_below="@id/section_label"/>-->





</RelativeLayout>
